# wifi-mapping

devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: wifi_drones.pc
devel/share/wifi_drones/cmake/: wifi_dronesConfig.cmake
src/manual_measurements/: CMakeLists.txt  package.xml
src/manual_measurements/msg/: AccessPointInfo.msg  WifiInfo.msg  locations.msg
src/wifi_drones/: CMakeLists.txt  package.xml
src/wifi_drones/action/: trace.action
src/wifi_drones/launch/: debug.launch  frames.gv  simulation.launch  test.launch
src/wifi_drones/launch/debug/: mapping.launch  world.launch
src/wifi_drones/launch/debug/config/: debug.rviz  simulation.rviz
src/wifi_drones/launch/debug/includes/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch.xml
src/wifi_drones/launch/simulation/: visualization.launch
src/wifi_drones/launch/simulation/config/: simulation.rviz
src/wifi_drones/models/: office.stl
src/wifi_drones/nodes/: AccessPointReader.py  botmover.py  config.py  controller.py  controller_infogain.py  fast_localize_simulation.py  getSignalStrength.py  move_client.py  move_commands.py  simulate.py  visualize_spawned_aps.py  wi_controller.py  wmdatacollect.py  wmdatatools_praneeth.py
