<?xml version="1.0"?>
<package>
  <name>drones_move</name>
  <version>0.0.0</version>
  <description>The drones_move package</description>
  <maintainer email="charuvah@buffalo.edu">charuvah</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>manual_measurements</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>manual_measurements</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <export>
  </export>
</package>
